Pico changes (config driven, new builder APIs)